# NeuroMorphoVis

./: .gitignore  .version  AUTHORS  AUTHORS.md  CMakeLists.txt  COPYRIGHT  LICENSE  PAPERS.md  PUBLICATIONS.md  README  README.md  __init__.py  biovis24.cfg  index.md  neuromorphovis.cfg  neuromorphovis.py  neuromorphovis.sh  setup.cfg  setup.py  setup.sh
data/: spines-design.blend
data/em-spines-morphologies/: 1.spine  10.spine  11.spine  12.spine  13.spine  14.spine  15.spine  16.spine  17.spine  18.spine  19.spine  2.spine  20.spine  21.spine  22.spine  23.spine  24.spine  25.spine  27.spine  28.spine  29.spine  3.spine  30.spine  31.spine  32.spine  33.spine  34.spine  35.spine  36.spine  37.spine  38.spine  39.spine  4.spine  40.spine  41.spine  42.spine  43.spine  44.spine  5.spine  6.spine  (+3 more)
data/simple-spines-morphologies/: 1.spine  2.spine  3.spine  4.spine  5.spine  6.spine  7.spine  8.spine  9.spine  spine_1.data  spine_2.data  spine_3.data  spine_5.data  spine_6.data  spine_7.data  spine_8.data
data/spines-modeling/: spines-modeling-1.blend  spines-modeling.blend  spines-modeling.blend1
data/spines-morphologies/: 1.spine  10.spine  11.spine  12.spine  13.spine  14.spine  15.spine  16.spine  17.spine  18.spine  19.spine  2.spine  20.spine  21.spine  22.spine  23.spine  24.spine  25.spine  27.spine  28.spine  29.spine  3.spine  30.spine  31.spine  32.spine  33.spine  34.spine  35.spine  36.spine  (+14 more)
installation/: run-blender-nmv-mac.sh
morphology-samples/: C031097B-I4.CNG.swc
neuromorphovis/: __init__.py
neurorender/: __init__.py  neurorender.py  neurorender.sh  style.config
nmv/: __init__.py
pref/: nmv-2.79-pref.blend  nmv-2.80-mac-pref.blend  nmv-2.81-mac-pref.blend
setup/: deps.txt  setup-windows-blender-3.0.bat  setup-windows-blender-3.5.bat  setup-windows-blender-4.0.bat  setup-windows-blender-4.2.bat
src/: BMesh.hpp  EigenValue.hpp  Normal.hpp  PyInterface.cpp  Triangle.hpp
tests/: input_data.py  run_nmv_tests.py  run_nmv_tests.sh  test_bmesh_face_ops.py  test_bmesh_objects.py  test_bmesh_vertex_ops.py
tutorials/: tutorial-1.md
utilities/: get_pip.py
(+15865 files in other folders)
